--- a/M_Mouse/contact.html
+++ b/M_Mouse/contact.html
@@ -14,6 +14,7 @@
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/vicons-font.css" rel="stylesheet" />
     <link href="css/sim-prev-anim.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
 <body class="inner_page">
@@ -198,6 +199,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery-migrate.min.js"></script>
     <script src="js/imagesloaded.min.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA82yeRybJuw-9ehyzCuHLgSqmLFMuqhKY&callback=initMap"
             async defer></script>
