--- a/M_Mouse/gallery.html
+++ b/M_Mouse/gallery.html
@@ -14,6 +14,7 @@
     <link href="css/normalize.css" rel="stylesheet" />
     <link href="css/vicons-font.css" rel="stylesheet" />
     <link href="css/sim-prev-anim.css" rel="stylesheet" />
+    <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
 <body class="inner_page">
@@ -112,118 +113,130 @@
             <section class="clearfix masonry">
                 <div class="grid-sizer"></div>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
                 <figure class="clearfix sim-anim-8 grid-item">
-                    <div class="image_container">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="static_image">
-                        <img src="images/gallery_img.png" alt="">
-                    </div>
-                    <div class="description">
-                        Альбом 1
-                    </div>
+                    <a href="photo.html">
+                        <div class="image_container">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="static_image">
+                            <img src="images/gallery_img.png" alt="">
+                        </div>
+                        <div class="description">
+                            Альбом 1
+                        </div>
+                    </a>
                 </figure>
             </section>
             <div class="box bg-1">
@@ -275,6 +288,7 @@
     <script src="js/slick.min.js"></script>
     <script src="js/jquery-migrate.min.js"></script>
     <script src="js/imagesloaded.min.js"></script>
+    <script src="js/lightbox.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA82yeRybJuw-9ehyzCuHLgSqmLFMuqhKY&callback=initMap"
             async defer></script>
