--- a/M_Mouse/photo.html
+++ b/M_Mouse/photo.html
@@ -17,7 +17,7 @@
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
 
-<body>
+<body class="inner_page">
 
     <header>
         <div class="header_block clearfix">
@@ -101,145 +101,49 @@
         </div>
     </header>
 
-    <div class="slider_figure_block">
+    <div class="photo_block">
         <div class="container">
-            <div class="figure">
-                <img src="images/arch_2600.png" alt="">
-            </div>
-        </div>
-        <div class="slider">
-            <div class="slide">
-                <p>ура! мы открылись!</p>
-                <img src="images/slide_1.png" alt="">
-            </div>
-            <div class="slide">
-                <p>ура! мы открылись!</p>
-                <img src="images/slide_1.png" alt="">
-            </div>
-            <div class="slide">
-                <p>ура! мы открылись!</p>
-                <img src="images/slide_1.png" alt="">
-            </div>
-        </div>
-    </div>
-
-    <div class="about_us_block">
-        <div class="container clearfix">
-            <h1 class="main_header">о нас</h1>
-            <div class="left">
-                <img src="images/about_us_2.png" alt="">
-                <img src="images/about_us_1.png" alt="">
-            </div>
-            <div class="right">
-                <p>
-                    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-                    in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
-                    Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked
-                    up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the
-                    cites of the word in classical literature, discovered the undoubtable source.
-                </p>
-                <p>
-                    The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
-                    Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
-                    Cicero are also reproduced in their exact original form,
-                    accompanied by English versions from the 1914 translation by H. Rackham.
-                </p>
-                <section class="content">
-                    <div class="box bg-1">
-                        <a href="blog.html">
-                            <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
-                        </a>
-                    </div>
-                </section>
-            </div>
-            <div class="clearfix"></div>
-        </div>
-    </div>
-
-    <div class="news_block">
-        <h2 class="main_header">новости</h2>
-        <div class="container clearfix">
-            <div class="news_item fadeInLeftBig wow" data-wow-duration="1s">
-                <div class="date">
+            <section>
+                <h1 class="main_header">Фото</h1>
+                <div class="breadcrumbs">
                     <ul>
-                        <li>03</li>
-                        <li>окт</li>
+                        <li><a href="/">Главная</a></li>
+                        <li><a href="photo.html">Фото</a></li>
                     </ul>
                 </div>
-                <div class="img_container">
-                    <img src="images/news_img.png" alt="" >
-                </div>
-                <div class="description">
-                    <h3>
-                        The standard chunk of Lorem Ipsum
-                    </h3>
-                    <p>
-                        used since the 1500s is reproduced below for those interested.
-                        Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by.
-                    </p>
-                </div>
-                <section class="content">
-                    <div class="box bg-1">
-                        <a href="news.html">
-                            <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
+                <div class="photo_container clearfix">
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
                         </a>
                     </div>
-                </section>
-            </div>
-            <div class="news_item fadeInLeftBig wow" data-wow-delay="1s"  data-wow-duration="1s">
-                <div class="date">
-                    <ul>
-                        <li>03</li>
-                        <li>окт</li>
-                    </ul>
-                </div>
-                <div class="img_container">
-                    <img src="images/news_img.png" alt="">
-                </div>
-                <div class="description">
-                    <h3>
-                        The standard chunk of Lorem Ipsum
-                    </h3>
-                    <p>
-                        used since the 1500s is reproduced below for those interested.
-                        Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by.
-                    </p>
-                </div>
-                <section class="content">
-                    <div class="box bg-1">
-                        <a href="news.html">
-                            <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
                         </a>
                     </div>
-                </section>
-            </div>
-            <div class="news_item fadeInLeftBig wow" data-wow-delay="2s"  data-wow-duration="1s">
-                <div class="date">
-                    <ul>
-                        <li>03</li>
-                        <li>окт</li>
-                    </ul>
-                </div>
-                <div class="img_container">
-                    <img src="images/news_img.png" alt="">
-                </div>
-                <div class="description">
-                    <h3>
-                        The standard chunk of Lorem Ipsum
-                    </h3>
-                    <p>
-                        used since the 1500s is reproduced below for those interested.
-                        Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by.
-                    </p>
-                </div>
-                <section class="content">
-                    <div class="box bg-1">
-                        <a href="news.html">
-                            <button class="button button--moema button--text-thick button--text-upper button--size-s">подробнее</button>
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
                         </a>
                     </div>
-                </section>
-            </div>
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
+                        </a>
+                    </div>
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
+                        </a>
+                    </div>
+                    <div class="photo_item">
+                        <a href="images/gallery_img.png" data-lightbox="gallery_1">
+                            <img src="images/gallery_img.png" alt="">
+                        </a>
+                    </div>
+                </div>
+            </section>
         </div>
     </div>
 
