--- a/M_Mouse/team.html
+++ b/M_Mouse/team.html
@@ -84,7 +84,7 @@
                             </a>
                         </li>
                         <li class="animated">
-                            <a href="about_us.html">
+                            <a href="">
                                 <span>Наш садик</span>
                                 <img src="images/garden.png" alt="">
                             </a>
@@ -93,6 +93,26 @@
                             <a href="index.html">
                                 <span>Главная</span>
                                 <img src="images/main.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="sub-menu">
+                        <li>
+                            <a href="menu.html">
+                                <span>Меню</span>
+                                <img src="images/menu.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="menu.html">
+                                <span>Расписание</span>
+                                <img src="images/list.png" alt="">
+                            </a>
+                        </li>
+                        <li>
+                            <a href="menu.html">
+                                <span>Праздники</span>
+                                <img src="images/holiday.png" alt="">
                             </a>
                         </li>
                     </ul>
@@ -133,6 +153,7 @@
                     <div class="right">
                         <img src="images/ava.png" alt="">
                     </div>
+                    <div class="clearfix"></div>
                 </div>
                 <div class="documentation clearfix">
                     <div class="documentation_item">
@@ -203,37 +224,42 @@
     </div>
 
     <footer style="background: url('images/footer_background.png') no-repeat center center; background-size: cover;">
-    <div class="container clearfix">
-        <div class="footer_item">
-            <h4>меню</h4>
-            <ul>
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="about_us.html">Наш садик</a></li>
-                <li><a href="team.html">Колектив</a></li>
-                <li><a href="blog.html">Блог</a></li>
-                <li><a href="gallery.html">Галерея</a></li>
-                <li><a href="contact.html">Контакты</a></li>
-            </ul>
+        <div class="scrollup_container">
+                <span id="scrollup">
+                    <i class="fa fa-angle-up" aria-hidden="true"></i>
+            </span>
         </div>
-        <div class="footer_item">
-            <h4>контакты</h4>
-            <ul>
-                <li>0526254533<br>
-                    088678887</li>
-                <li>Хуша Ханави, 1<br>
-                    Район Юд Ашдод</li>
-            </ul>
+        <div class="container clearfix">
+            <div class="footer_item">
+                <h4>меню</h4>
+                <ul>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="about_us.html">Наш садик</a></li>
+                    <li><a href="team.html">Колектив</a></li>
+                    <li><a href="blog.html">Блог</a></li>
+                    <li><a href="gallery.html">Галерея</a></li>
+                    <li><a href="contact.html">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="footer_item">
+                <h4>контакты</h4>
+                <ul>
+                    <li>0526254533<br>
+                        088678887</li>
+                    <li>Хуша Ханави, 1<br>
+                        Район Юд Ашдод</li>
+                </ul>
+            </div>
+            <div class="footer_item">
+                <h4>мы в социальных сетях</h4>
+                <ul class="clearfix">
+                    <li><a class="animated" href=""><img src="images/facebook.png" alt=""></a></li>
+                    <li><a class="animated" href=""><img src="images/vk.png" alt=""></a></li>
+                    <li><a class="animated" href=""><img src="images/twitter.png" alt=""></a></li>
+                    <li><a class="animated" href=""><img src="images/ok.png" alt=""></a></li>
+                </ul>
+            </div>
         </div>
-        <div class="footer_item">
-            <h4>мы в социальных сетях</h4>
-            <ul class="clearfix">
-                <li><a class="animated" href=""><img src="images/facebook.png" alt=""></a></li>
-                <li><a class="animated" href=""><img src="images/vk.png" alt=""></a></li>
-                <li><a class="animated" href=""><img src="images/twitter.png" alt=""></a></li>
-                <li><a class="animated" href=""><img src="images/ok.png" alt=""></a></li>
-            </ul>
-        </div>
-    </div>
         <a href="web-intellectus.com">Создание и разработка сайта © Intellectus-studio 2016</a>
     </footer>
 
