--- a/M_Mouse/team.html
+++ b/M_Mouse/team.html
@@ -16,6 +16,8 @@
     <link href="css/sim-prev-anim.css" rel="stylesheet" />
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
+    <script src="js/jquery.min.js"></script>
+    <script src="js/countdown.js"></script>
 
 <body class="inner_page">
 
@@ -30,13 +32,36 @@
                             <td>До Нового года осталось:</td>
                         </tr>
                         <tr>
-                            <td>ул. Хуша Анави, 1, район Йуд Ашдод, г. Ашдод</td>
-                            <td><span>34</span> дня <span>10</span> часов <span>46</span> минут</td>
+                            <td>ул. Хуша Анави, 1, район Йуд Ашдод, г. Ашдод
+                            </td>
+                            <script>
+                                jQuery(document).ready(function(){
+                                    jQuery('.countdown').downCount({
+                                        date: '12/31/2016 12:00:00',
+                                        offset: +10
+                                    }, function () {
+                                        alert('WOOT WOOT, done!');
+                                    });
+                                });
+                            </script>
+                            <td>
+                                <ul class="countdown">
+                                    <li> <span class="days">00</span>
+                                    </li>
+                                    <li class="seperator">дня</li>
+                                    <li> <span class="hours">00</span>
+                                    </li>
+                                    <li class="seperator">часов</li>
+                                    <li> <span class="minutes">00</span>
+                                    </li>
+                                    <li class="seperator">минут</li>
+                                </ul>
+                            </td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
-                <div class="right">
+                <div class="right clearfix">
                     <div class="language clearfix">
                         <div class="lang">
                             <div class="lang_item">
@@ -51,13 +76,18 @@
                             </div>
                         </div>
                     </div>
+                    <div class="burger" onselectstart="return false" onmousedown="return false">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
                 </div>
             </div>
             <div class="container">
                 <div class="logo">
-                    <img src="images/logo.png" alt="">
+                    <a href="index.html">
+                        <img src="images/logo.png" alt="">
+                    </a>
                 </div>
-                <menu>
+                <menu class="responsive_menu">
                     <ul>
                         <li class="animated">
                             <a href="contact.html">
@@ -113,6 +143,59 @@
                             <a href="menu.html">
                                 <span>Праздники</span>
                                 <img src="images/holiday.png" alt="">
+                            </a>
+                        </li>
+                    </ul>
+                </menu>
+            </div>
+            <div class="mobile_menu">
+                <menu>
+                    <ul>
+                        <li class="animated">
+                            <a href="contact.html">
+                                Контакты
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="gallery.html">
+                                Галерея
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="blog.html">
+                                Блог
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="team.html">
+                                Коллектив
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="">
+                                Наш садик
+                            </a>
+                            <ul class="sub-menu">
+                                <li>
+                                    <a href="menu.html">
+                                        Меню
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="menu.html">
+                                        Расписание
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="menu.html">
+                                        Праздники
+                                    </a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="animated">
+                            <a href="index.html">
+                                Главная
                             </a>
                         </li>
                     </ul>
@@ -263,7 +346,8 @@
         <a href="web-intellectus.com">Создание и разработка сайта © Intellectus-studio 2016</a>
     </footer>
 
-    <script src="js/jquery.min.js"></script>
+    
+    <script src="js/script.js"></script>
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/slick.min.js"></script>
@@ -273,7 +357,6 @@
     <script src="js/wow.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA82yeRybJuw-9ehyzCuHLgSqmLFMuqhKY&callback=initMap"
             async defer></script>
-    <script src="js/script.js"></script>
 
 </body>
 
