--- a/M_Mouse/contact.html
+++ b/M_Mouse/contact.html
@@ -6,13 +6,13 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/owl.carousel.css">
-    <link rel="stylesheet" href="css/slick.css"/>
-    <link rel="stylesheet" href="css/slick-theme.css"/>
+    <!--<link rel="stylesheet" href="css/slick.css"/>-->
+    <!--<link rel="stylesheet" href="css/slick-theme.css"/>-->
     <link href="css/animate.css" rel="stylesheet" />
     <link href="css/buttons.css" rel="stylesheet" />
     <!--<link href="css/base.css" rel="stylesheet" />-->
     <link href="css/normalize.css" rel="stylesheet" />
-    <link href="css/vicons-font.css" rel="stylesheet" />
+    <!--<link href="css/vicons-font.css" rel="stylesheet" />-->
     <link href="css/sim-prev-anim.css" rel="stylesheet" />
     <link href="css/lightbox.css" rel="stylesheet" />
     <link href="css/styles.css" rel="stylesheet" />
@@ -303,8 +303,8 @@
 
     <script src="js/masonry.pkgd.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/slick.min.js"></script>
-    <script src="js/jquery-migrate.min.js"></script>
+    <!--<script src="js/slick.min.js"></script>-->
+    <!--<script src="js/jquery-migrate.min.js"></script>-->
     <script src="js/imagesloaded.min.js"></script>
     <script src="js/lightbox.js"></script>
     <script src="js/wow.min.js"></script>
