--- a/M_Mouse/photo.html
+++ b/M_Mouse/photo.html
@@ -32,7 +32,7 @@
                             <td>До Нового года осталось:</td>
                         </tr>
                         <tr>
-                            <td>ул. Хуша Анави, 1, район Йуд Ашдод, г. Ашдод
+                            <td>ул. Хуша Анави, 1, район Йуд Ашдод
                             </td>
                             <script>
                                 jQuery(document).ready(function(){
@@ -152,23 +152,8 @@
                 <menu>
                     <ul>
                         <li class="animated">
-                            <a href="contact.html">
-                                Контакты
-                            </a>
-                        </li>
-                        <li class="animated">
-                            <a href="gallery.html">
-                                Галерея
-                            </a>
-                        </li>
-                        <li class="animated">
-                            <a href="blog.html">
-                                Блог
-                            </a>
-                        </li>
-                        <li class="animated">
-                            <a href="team.html">
-                                Коллектив
+                            <a href="index.html">
+                                Главная
                             </a>
                         </li>
                         <li class="animated">
@@ -194,8 +179,23 @@
                             </ul>
                         </li>
                         <li class="animated">
-                            <a href="index.html">
-                                Главная
+                            <a href="team.html">
+                                Коллектив
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="blog.html">
+                                Блог
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="gallery.html">
+                                Галерея
+                            </a>
+                        </li>
+                        <li class="animated">
+                            <a href="contact.html">
+                                Контакты
                             </a>
                         </li>
                     </ul>
@@ -287,7 +287,9 @@
                 </ul>
             </div>
         </div>
-        <a href="web-intellectus.com">Создание и разработка сайта © Intellectus-studio 2016</a>
+        <div class="company_link">
+            <a href="web-intellectus.com">Создание и разработка сайта © Intellectus-studio 2016</a>
+        </div>
     </footer>
 
     <script src="js/masonry.pkgd.min.js"></script>
